--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <h2 id="top" style="font-family:Georgia, 'Times New Roman', Times, serif">Top Celebrity Brands</h2>
               <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-5">
                 <div class="col">
-                  <div class="p-3 border bg-light"><img src="img/Hermes.jpg" class="card-img-top" alt="...">
+                  <div class="p-3 border bg-light"><img src="img/hermes.jpg" class="card-img-top" alt="...">
                     <h5 class="card-title">Hermes 24 Faubourg</h5>
                     <p class="card-text">$1250.00</p>
                     <button type="button" class="btn btn-success ms-2 py-1 px-3"> Shop Now</button>
